--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="col-lg-12">
                 <div class="content generation">
                     <h5> Use the slider to set a length and hit Create for your new password!</h3>
-                    <input type="range" name="slide" id="length" min="8" max="50">
-                    <div id="characteramount"></div>
+                    <input type="range" name="length" id="length" min="8" max="50">
+                    <div id="length"></div>
                     <div class="setting">
                         <label>Include uppercase letters</label> 
                         <input type="checkbox" id="uppercase" checked />
