--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row header">
             <div class="col-lg-12">
                 <h1> Password Generator </h1>
-                <span type="text" id="result" placeholder="Your new password will be shown here!"></span>
+                <span edit="false" type="text" id="result" placeholder="Your new password will be shown here!"></span>
             </div>
         </div>
             <div class="col-lg-12">
@@ -40,8 +40,8 @@
                         <label>Include symbols</label> 
                         <input type="checkbox" id="symbol" checked />
                     </div>
-                    <button class="btn btn-large" id="generate">Create</button>
-                    <button class="btn btn-large" id= "copy">Copy to Clipboard</button>
+                    <button class="btn btn-large" id="generate" onclick="generatePassword()">Create</button>
+                    <button class="btn btn-large" id= "copy" onclick="copy(getResult())">Copy to Clipboard</button>
                 </div>
             </div>
         </div>
